--- a/application/index/view/index/btb.html
+++ b/application/index/view/index/btb.html
@@ -469,9 +469,10 @@
                         <div class="foot-logo">
                             <img src="__PUBLIC__/img/foot_logo.png">
                             <ul>
-                                <li><a href="#" target="_blank">赛思特科技官网</a></li>
-                                <li><a href="#" target="_blank">赛思特APP开发</a></li>
-                            
+                                <li><a href="#" target="_blank">区块链开发</a></li>
+                                <li><a href="#" target="_blank">隐私政策</a></li>
+                                <li><a href="/sitemap.xml" target="_blank">xml地图</a></li>
+                                <!-- <li><a href="#" target="_blank"></a></li> -->
                             </ul>
                         </div>
                     </div>
@@ -542,7 +543,7 @@
     <div class="bottom_fix">
         <div class="bottom_left">
             <li>
-                <a href="__PUBLIC__/index.html"><img src="__PUBLIC__/img/common_icon_home.png">返回首页</a>
+                <a href="/index.html"><img src="__PUBLIC__/img/common_icon_home.png">返回首页</a>
             </li>
             <li>
                 <a href="tel:15188358607"><img src="__PUBLIC__/img/common_icon_tel.png">电话咨询</a>
