--- a/application/index/view/index/show_detail.html
+++ b/application/index/view/index/show_detail.html
@@ -19,6 +19,7 @@
 <script src="__PUBLIC__/js/jquery-1.8.3.min.js"  type="text/javascript"></script>
 <script src="__PUBLIC__/js/jquery-3.4.1.min.js" ></script>
 <script src="__PUBLIC__/js/bootstrap.js" ></script>
+<script src="__PUBLIC__/js/swiper.min.js" ></script>
 
 </head>
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" >
