这是试着提交

--- a/application/index/view/index/btb.html
+++ b/application/index/view/index/btb.html
@@ -21,46 +21,7 @@
 <body id="page-top" data-spy="scroll" data-target=".navbar-fixed-top" style="height: 100%;">
 <div class="nav-top"></div>
 <div class="head_cont">
-    <nav class="navbar navbar-expand-md navbar-dark app-navbar ">
-        <div class="container">
-            <a class="navbar-brand" href="/index.html"><img class="nav-logo" src="__PUBLIC__/img/1572577150.png" alt="赛思特科技logo"></a>
-            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="" style="color: #000;">☰</span>
-            </button>
-            <div class="navbar-collapse collapse" id="navbarsExample07">
-                <ul class="navbar-nav ml-auto navbar-nav ml-auto justify-content-end col-lg-12 pr-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link " href="/index.html">首页</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="btb.html">数字货币交易所</a>
-                    </li>
-                    <li class="nav-item">
-                        <img src="__PUBLIC__/img/hot.gif" class="hot" style="margin-left:100px">
-                        <a class="nav-link" href="wallet.html">数字货币钱包</a>
-                    </li>
-                    <li class="nav-item">
-                        <img src="__PUBLIC__/img/hot.gif" class="hot" style="margin-left:70px">
-                        <a class="nav-link" href="runSub.html">跑分系统</a>
-                    </li>
-                    <!-- <li class="nav-item dropdown">
-                        <img src="__PUBLIC__/img/hot.gif" class="hot" style="margin-left:100px">
-                        <a class="nav-link dropdown-toggle" href="http://qkl.jinbocc.com/yycj/" id="dropdown07" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">区块链产品</a>
-                        <div class="dropdown-menu" aria-labelledby="dropdown07">
-                            <a class="dropdown-item" href="pages/show.php-lang=cn&id=120.html" tppabs="http://qkl.jinbocc.com/yycj/show.php?lang=cn&id=120">数字资产交易系统</a>
-                            <a class="dropdown-item" href="pages/show.php-lang=cn&id=107.html" tppabs="http://qkl.jinbocc.com/yycj/show.php?lang=cn&id=107">数字资产钱包</a>
-                        </div>
-                    </li> -->
-                    <li class="nav-item">
-                        <a class="nav-link" href="anli.html">案例与优势</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="contact.html">联系我们</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
+    {include file="public/header" /}
 </div>
 
 <link rel="stylesheet" href="__PUBLIC__/css/szzc.css">
